some language feature migration and code related code cleanup